<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <TextView
        android:id="@+id/tv_selection_prompt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/pick_a_city_to_forecast"
        android:textColor="@android:color/black"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_alexandria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/alexandria_eg"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_tokyo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/tokyo_jp"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_istanbul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/istanbul_tr"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_berlin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/berlin_de"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_kuala_lumpur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="?attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_horizontal"
        android:paddingBottom="4dp"
        android:paddingTop="4dp"
        android:text="@string/kuala_lumpur_my"
        android:textSize="18sp"/>
</LinearLayout>